<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="titlespinner">
        <item >题名</item>
        <item >责任者</item>
        <item >主题词</item>
        <item >ISBN/ISSN</item>
        <item >订购号</item>
        <item >分类号</item>
        <item >索书号</item>
        <item >出版社</item>
        <item >丛书名</item>
        <item >题名拼音</item>
        <item >责任者拼音</item>
    </string-array>
    
    <string name="app_name">YsuLibrary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="login_password_hint">请输入密码&#8230;</string>
	<string name="to_input_number">请输入学号&#8230;</string>
	<string name="check_code">验证码</string>
	<string name="rember_pwd">记住密码</string>
	<string name="login">登陆</string>
	<string name="notice">通知公告</string>
	<string name="search">检索</string>
	<string name="my_center">个人</string>
	<string name="back">&lt;</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
</resources>
