<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <FrameLayout 
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@drawable/base_horization_line"/>
    
	<RadioGroup 
	    android:id="@+id/main_group"
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_gravity="bottom"
	    android:background="@color/bottom_grey"
	    android:gravity="center_vertical"
	    android:orientation="horizontal"
	    android:paddingTop="3dp"
	    android:paddingBottom="2dp">
	    
	    <RadioButton 
	        android:id="@+id/rb_msg"
	        style="@style/main_tab_bottom"
	        android:drawableTop="@drawable/rb_msg"
	        android:textSize="12sp"
	        android:textColor="@color/main_bottom_text_color"
	        android:text="@string/notice"/>
	    
	    <RadioButton 
	        android:id="@+id/rb_main"
	        style="@style/main_tab_bottom"
	        android:drawableTop="@drawable/rb_main"
	        android:textSize="12sp"
	        android:text="@string/search"/>
	    
	    <RadioButton 
	        android:id="@+id/rb_my_center"
	        style="@style/main_tab_bottom"
	        android:drawableTop="@drawable/rb_my_center"
	        android:textSize="12sp"
	        android:text="@string/my_center"/>
	    
	</RadioGroup>
    
</LinearLayout>
