<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/librivity_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_number"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="25dip"
                android:hint="@string/to_input_number"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_passwd"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="25dip"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColorHint="#ffdddddd" />
        </LinearLayout>
        <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">
        <TextView 
            android:id="@+id/yanzheng"
            android:layout_marginLeft="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#030303"
            android:textSize="15dp"
            android:text="@string/check_code"/>
        <EditText 
            android:id="@+id/et_check"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/yanzheng"  />
        <ImageView 
	        android:id="@+id/imv_checkcode"
	        android:layout_width="60dp"
	        android:layout_height="40dp"
	        android:layout_toRightOf="@id/et_check"/>    
	    <CheckBox 
            android:id="@+id/cb_rember"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="10sp"
        	android:layout_marginRight="20sp"
        	android:layout_alignParentRight="true"
        	android:textSize="12dp"
        	android:text="@string/rember_pwd"/>
    </RelativeLayout>
   
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/btn_login_selector"
        android:textColor="@color/base_color_text_white"
        android:scaleType="matrix"
        android:text="@string/login"/>

    </LinearLayout>

</RelativeLayout>